yearning cicd